# ros-workspace

./: .gitmodules  README.md  frames_2024-10-22_05.25.18.gv  frames_2024-10-22_18.34.58.gv  frames_2024-10-22_21.38.00.gv  frames_2024-10-25_14.54.31.gv  frames_2024-11-23_16.47.01.gv  frames_2024-11-23_18.00.12.gv  keepout.py  my_map.pgm  os-122116000061-metadata.json  test.pgm  test.yaml
src/nav2_outdoor_example/: CMakeLists.txt  README.md
src/nav2_outdoor_example/config/: diff_drive_controller_velocity.yaml  diff_drive_controller_velocity_snowplow.yaml  gazebo_bridge_config.yaml  nav2_params.yaml  simulation_ekf_gps.yaml  ukf.yaml
src/nav2_outdoor_example/config/robot_localization/: simulation_ekf_gps.yaml  simulation_ukf_gps.yaml
src/nav2_outdoor_example/config/slam/: localization_params_online_async.yaml  mapper_params_online_async.yaml
src/nav2_outdoor_example/launch/: localization.launch.py  navigation.launch.py  simulation.launch.py  slam_localization.launch.py  snowplow_bringup.launch.py
src/nav2_outdoor_example/rviz/: navigation_config.rviz
src/nav2_outdoor_example/src/: frame_id_modifier.cpp
src/nav2_outdoor_example/urdf/: face.xacro  gps_ign.xacro  imu_ign.xacro  lidar_ign.xacro  materials.xacro  plowblade.xacro  robot.urdf_ign.xacro  ros2_control_ign.xacro  wheel.xacro
src/nav2_outdoor_example/urdf/meshes/: base_link.stl  wheel.stl
src/nav2_outdoor_example/world/: empty.sdf  slam_testing.data  turtlebot3_world_empty.pgm
src/snowplow/: CMakeLists.txt  README.md  package.xml
src/snowplow/config/: gazebo_bridge_config.yaml  mapper_params_online_async.yaml  my_controllers.yaml  my_controllers_sim.yaml
src/snowplow/config/nav2/: nav2_params.yaml  physical_nav2_params.yaml  planner_lattice_10cm.json  planner_lattice_30cm.json  planner_lattice_50cm.json
src/snowplow/config/ouster/: driver_params.yaml
src/snowplow/config/robot_localization/: navsat_transform.yaml  physical_ekf_gps.yaml  simulation_ekf_gps.yaml  simulation_ukf_gps.yaml
src/snowplow/config/rviz/: navigation_config.rviz  slam.rviz
src/snowplow/config/sbg/: ellipse_N.yaml  sbg_config.yaml
src/snowplow/config/slam/: localization_params_online_async.yaml  mapper_params_online_async.yaml  physical_localization_params_online_async.yaml  physical_mapper_params_online_async .yaml
src/snowplow/description/: battery.xacro  gazebo_control.xacro  gazebo_control_ign.xacro  gps.backup.xacro  gps.xacro  gps_ign.xacro  imu.xacro  imu_ign.xacro  lidar.xacro  lidar_ign.xacro  plowblade.xacro  robot.urdf.xacro  robot.urdf_ign.xacro  robot_core.xacro  robot_ign.sdf  ros2_control.xacro  ros2_control_ign.xacro
src/snowplow/launch/: ball_tracker.launch.py  diff_drive_example.launch.py  gps_localization.launch.py  gps_navigation.launch.py  joystick.launch.py  launch_physical_gps.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_sim.launch_gps.py  launch_sim_gps.launch.py  launch_sim_gps_arm.launch.py  launch_sim_gps_ukf.launch.py  launch_sim_ign.launch.py  launch_sim_ign_gps.launch.py  launch_sim_ign_gps_save.launch.py  localization.launch.py  localization_launch.py  navigation.launch.py  navigation_launch.py  online_async_launch.py  physical_localization.launch.py  physical_navigation.launch.py  physical_simulation.launch.py  physical_slam_localization.launch.py  physical_snowplow_bringup.launch.py  remote_control.launch.py  rsp.launch.py  rsp_ign.launch.py  simulation.launch.py  slam.launch.py  slam_localization.launch.py  slam_navigation.launch.py  snowplow_bringup.launch.py  urdfTest.launch.py  visualization.launch.py
src/snowplow/launch/drivers/: lidar_driver.launch  lidar_driver.launch.py  ntrip_client.launch.py  sbg_ellipse.launch.py  sbg_ellipseN.launch
src/snowplow/worlds/: capstone_1.world  empty.sdf  slam_navmap.pgm  slam_navmap.yaml  test.sdf  turtlebot3_world.xcf  turtlebot3_world.yaml
src/snowplow/worlds/competition/: test.data  test.pgm
src/snowplow/worlds/slam/: capstone_test.pgm  capstone_test.yaml  capstone_test_serial.data  test.data  test.pgm  test.yaml  test_old.pgm
